# PCE-Core

./: .aider.chat.history.md  .aider.input.history  .gitignore  BUILD.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATED-MIGRATION-2026-05-20.md  LICENSE  NOTICE  PRIVACY.md  README.md  RECEIPT.json  SECURITY.md  _inspect_d06_focused.py  _inspect_d06_message_content.py  _inspect_window_a.py  _inspect_window_b.py  _inspect_window_e.py  pce.py  pce.spec  pytest.ini  requirements.txt  run_e2e.py  run_proxy.py
.github/: PULL_REQUEST_TEMPLATE.md
Docs/: E2E_STATUS_2026-04-10.md  MANUAL_VERIFICATION_CHECKLIST.md  README.md  STORAGE_EXECUTION_PLAN.md
pce_app/: __init__.py  __main__.py  capability_check.py  control_panel.py  managed_browser.py  service_manager.py  system_state_guard.py  tray.py  tray_actions.py
pce_app/tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
pce_app/tauri/capabilities/: default.json
pce_app/tauri/icons/: README.md
pce_app/tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
pce_app_launcher/: __init__.py  __main__.py
pce_browser_extension/: README.md  manifest.json  manifest.store.json
pce_browser_extension_wxt/: .gitignore  DEPRECATED.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  vitest.config.ts  wxt.config.ts
pce_cli_wrapper/: __init__.py  __main__.py  _proxy_env.py  _undici_proxy_inject.js  capture.py  config.py  discovery.py  install.py  relay.py
pce_core/: __init__.py  __main__.py  adapter_loader.py  analytics.py  app_bypass.py  app_state.py  branch_backfill.py  capture_event.py  clipboard_monitor.py  config.py  db.py  diagnose.py  electron_proxy.py  export.py  exporter.py  git_context.py  health.py  import_data.py  logging_config.py  mobile_wizard.py  models.py  onboarding.py  otel_exporter.py  pac_generator.py  phoenix_integration.py  redact.py  retention.py  server.py  (+5 more)
(+828 files in other folders)
