[package]
name = "pce-desktop"
version = "0.1.0"
description = "PCE Personal Cognitive Engine desktop shell"
authors = ["PCE contributors"]
edition = "2021"
rust-version = "1.70"

# The Rust side is intentionally small: it just supervises the Python
# core (which serves the dashboard + API) and exposes a native tray +
# window chrome. Keep this file short — the Python side does the work.

[lib]
name = "pce_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pce-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri stack (v2 LTS).
tauri         = { version = "2",   features = ["tray-icon", "image-png"] }
tauri-plugin-opener       = "2"
tauri-plugin-shell        = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-single-instance = "2"

# Serialization + structured logging.
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
log          = "0.4"
env_logger   = "0.11"

# Small HTTP client used only for health-polling the Python core.
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio        = { version = "1",    features = ["full"] }

# Locating bundled resources (DATA_DIR, sidecar binary, etc.).
dirs         = "5"

[features]
# Default: devtools enabled so user can inspect the WebView via F12.
default   = ["custom-protocol"]
# This feature is used by tauri-build and must be present for a
# production build (release) to work without --dev.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # optimise for size — ~50 MB bundle is the P3 target.
strip = true
